# darkcoin-sgminer

./: Makefile.am  configure.ac  driver-opencl.c  findnonce.c  miner.h  ocl.c  sgminer.c  util.c  xcoin.c  xcoin.h
kernel/: darkcoin.cl  simd.cl
